packages/rdml/src/snapshots/rdml__tests__parse_literals.snap
---
source: packages/rdml/src/lib.rs
expression: result
---
Nodes {
    nodes: [
        Node {
            attrs: [],
            node: Text(
                LitStr {
                    token: "text here",
                },
            ),
        },
        Node {
            attrs: [],
            node: Element(
                Element {
                    path: Path {
                        leading_colon: None,
                        segments: [
                            PathSegment {
                                ident: Ident(
                                    div,
                                ),
                                arguments: PathArguments::None,
                            },
                        ],
                    },
                    attributes: None,
                    children: Block {
                        brace_token: Brace,
                        nodes: [
                            Node {
                                attrs: [],
                                node: Text(
                                    LitStr {
                                        token: "stuff inside of elements",
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        },
        Node {
            attrs: [],
            node: Expr(
                ExprNode {
                    paren_token: Paren,
                    expr: Expr::Call {
                        attrs: [],
                        func: Expr::Path {
                            attrs: [],
                            qself: None,
                            path: Path {
                                leading_colon: None,
                                segments: [
                                    PathSegment {
                                        ident: Ident(
                                            expr,
                                        ),
                                        arguments: PathArguments::None,
                                    },
                                ],
                            },
                        },
                        paren_token: Paren,
                        args: [
                            Expr::Path {
                                attrs: [],
                                qself: None,
                                path: Path {
                                    leading_colon: None,
                                    segments: [
                                        PathSegment {
                                            ident: Ident(
                                                here,
                                            ),
                                            arguments: PathArguments::None,
                                        },
                                    ],
                                },
                            },
                        ],
                    },
                },
            ),
        },
    ],
}
